2007-04-22 Tim
 PATCH: [ 1703303 ] Improve translations instructions
  Developers: Translations.html

2007-04-12 Tim
 PATCH: [ 1699528 ] Translations instructions for dev docs
  Developers new file: Translations.html

2007-04-08 Kimmo
 Update Options documentation for latest changes
  Developers: Options.html

2007-04-06 Kimmo
 Update Organization.txt to match reality
  Developers: Organisation.txt

2007-04-05 Kimmo
 Document buildall.bat in readme-developers
  Developers: readme-developers.html

2007-03-15 Tim
 PATCH: [ 1681099 ] Add "Plugins" folder to installer doc
  Developers: readme-InnoSetup.html

2007-02-21 Kimmo
 Add pcre.dll and InnoSetup/Runtimes to installer doc
  Developers: readme-InnoSetup.html

2007-02-19 Kimmo
 Bugs 1663767-1663770, 1663776, 1663778: typo/grammar fixes.
  Developers: readme-developers.html
 Add short instructions for Visual Studio 2005
  Developers: readme-developers.html

2007-02-12 Tim
 PATCH: [ 1658347 ] Add note about PSDK paths and VC into dev-readme
  Developers: readme-developers.html
 PATCH: [ 1658383 ] Use Verdana font in dev docs
  Developers: *.html

2006-12-04 Kimmo
 Update SVN URLs
  Developers: readme-Subversion.html

2006-11-09 Tim
 PATCH: [ 1593009 ] Updated Organisation.txt
  Developers: Organisation.txt
 BUG: [ 1593013 ] Two "InnoSetup" readme's in DevDocs
  Developers deleted files: readme-developers-InnoSetup.html

2006-11-08 Tim
 Remove outdated "Docs\Developers\WinMerge files*"
  Developers deleted files: WinMerge files.pdf, WinMerge files.ppt
  Developers deleted directory: WinMerge files (Web format)

2006-11-07 Kimmo
 Add building instructions for PCRE
  Developers: readme-developers.html

2006-11-05 Kimmo
 Update building instructions for expat and scew (a lot simpler now)
  Developers: readme-developers.html

2006-11-03 Tim
 PATCH: [ 1589578 ] Add <h4> style to readme-developers.html
  Developers: readme-developers.html

2006-11-02 Kimmo
 Update installer doc for expat dlls