@@ -122,11 +122,11 @@ If you only want to improve a current translation, you find the file under the <
 
 <h3><a name="shellextension">Translating ShellExtension</a></h3>
 <p>ShellExtension can be translated by translating <code>.rc</code> resource file similarly to WinMerge executable.
-ShellExtension resource files are in <code><a href="http://svn.sourceforge.net/winmerge/trunk/ShellExtension/Languages/">WinMerge\ShellExtension\Languages\</a></code> folder.
+ShellExtension resource files are in <code><a href="http://winmerge.svn.sourceforge.net/viewvc/winmerge/trunk/ShellExtension/Languages/">WinMerge\ShellExtension\Languages\</a></code> folder.
 There are only few strings to translate so it should be fast to do.</p>
 
 <h3><a name="installer">Translating Installer</a></h3>
-<p>Installer translation files are in <code><a href="http://svn.sourceforge.net/winmerge/trunk/Installer/InnoSetup/Languages/">WinMerge\Installer\InnoSetup\Languages\</a></code> folder.
+<p>Installer translation files are in <code><a href="http://winmerge.svn.sourceforge.net/viewvc/winmerge/trunk/Installer/InnoSetup/Languages/">WinMerge\Installer\InnoSetup\Languages\</a></code> folder.
 Look for a file named by your language. If one does not yet exist, you should look for InnoSetup translations in <a href="http://www.jrsoftware.org/files/istrans/">http://www.jrsoftware.org/files/istrans/</a>.</p>
 
 <p>After you open the file, scroll to end of it, there are few custom strings you
@@ -140,7 +140,7 @@ from your improvements. We'll pick those updates then also.</p>
 <h3><a name="readme">Translating ReadMe.txt</a></h3>
 <p>Please consider translating also <code>ReadMe.txt</code> file - it is shown in end of installer
 and is added to Start-menu. Translated versions of <code>ReadMe.txt</code> are
-in <code><a href="http://svn.sourceforge.net/winmerge/trunk/Docs/Users/Languages/">WinMerge\Docs\Users\Languages\</a></code> folder. And master <code>ReadMe.txt</code> is
-in <code><a href="http://svn.sourceforge.net/winmerge/trunk/Docs/Users/ReadMe.txt">WinMerge\Docs\Users\ReadMe.txt</a></code>.</p>
+in <code><a href="http://winmerge.svn.sourceforge.net/viewvc/winmerge/trunk/Docs/Users/Languages/">WinMerge\Docs\Users\Languages\</a></code> folder. And master <code>ReadMe.txt</code> is
+in <code><a href="http://winmerge.svn.sourceforge.net/viewvc/winmerge/trunk/Docs/Users/ReadMe.txt">WinMerge\Docs\Users\ReadMe.txt</a></code>.</p>
 </body>
 </html>
